tests/negative_pomidory/more_than_1_obj_bckwrd_action_except.pomidor

When I see the #practice_menu_button and #practice_menu_button is click
